# aetos

./: .coveragerc  .gitignore  .gitreview  .pre-commit-config.yaml  .zuul.yaml  README.rst  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
aetos/: __init__.py  app.py  keystone_client.py  opts.py  policies.py  service.py
aetos/cmd/: aetos-config-generator.conf
aetos/controllers/api/v1/: base.py  label.py  labels.py  query.py  root.py  series.py  status.py  targets.py
aetos/controllers/api/v1/admin/tsdb/: clean_tombstones.py  delete.py  delete_series.py  root.py  snapshot.py
aetos/tests/: test_aetos.py
aetos/tests/functional/: base.py  policy.yaml-test  test_admin_endpoints.py  test_core_endpoints.py
aetos/tests/unit/: base.py  test_admin_endpoints.py  test_base_controller.py  test_core_endpoints.py
devstack/: plugin.sh
doc/source/: conf.py  index.rst
doc/source/cli/: index.rst
doc/source/configuration/: index.rst
doc/source/contributor/: contributing.rst
doc/source/install/: common_configure.rst  common_prerequisites.rst  get_started.rst  index.rst  install-obs.rst  install-rdo.rst  install-ubuntu.rst  install.rst  next-steps.rst  verify.rst
doc/source/reference/: index.rst
etc/aetos/: aetos-config-generator.conf
releasenotes/source/: index.rst
