[metadata]
name = aetos
summary = Aetos is a reverse proxy for enforcing openstack multi-tenancy for Prometheus.
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://www.openstack.org/
python-requires = >=3.9
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: System :: Monitoring

[files]
packages =
    aetos
data_files =
    etc/aetos = etc/aetos/*

[entry_points]
wsgi_scripts =
    aetos = aetos.app:build_wsgi_app

oslo.config.opts =
    aetos = aetos.opts:list_opts
    aetos-auth = aetos.opts:list_keystoneauth_opts

oslo.config.opts.defaults =
    aetos = aetos.conf.defaults:set_lib_defaults

oslo.policy.policies =
    aetos = aetos.policies:list_rules

oslo.policy.enforcer =
    aetos = aetos.policies:get_enforcer

